Modified some controller methods to get the objects via the correct variable. Checking for the rol in some methods.
